<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:id="@+id/main_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/main_dialog_about"
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:layout_height="40dp"
        android:text="操作"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="15dp" />
    <LinearLayout
        android:id="@+id/main_dialog_linear_about"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:elevation="10dp"
        android:orientation="horizontal"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true">
        <ImageView
            android:padding="10dp"
            android:layout_weight="4"
            android:src="@drawable/dialog_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/menu_noteabout"
            android:textColor="#ffffff"
            android:textSize="15dp"
            android:paddingLeft="20dp"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#636262"/>
    <LinearLayout
        android:id="@+id/main_dialog_linear_friendspace"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:elevation="10dp"
        android:orientation="horizontal"
        android:clickable="true">
        <ImageView
            android:padding="7dp"
            android:layout_weight="4"
            android:src="@drawable/dialog_friendspace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/menu_friendspace"
            android:textColor="#ffffff"
            android:textSize="15dp"
            android:paddingLeft="20dp"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#636262"/>
    <LinearLayout
        android:id="@+id/main_dialog_linear_hide"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:elevation="10dp"
        android:orientation="horizontal"
        android:clickable="true">
        <ImageView
            android:padding="10dp"
            android:layout_weight="4"
            android:src="@drawable/dialog_hide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/menu_notehide"
            android:textColor="#ffffff"
            android:textSize="15dp"
            android:paddingLeft="20dp"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#636262"/>
    <LinearLayout
        android:id="@+id/main_dialog_linear_delete"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:elevation="10dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:clickable="true">
        <ImageView
            android:padding="10dp"
            android:layout_weight="4"
            android:src="@drawable/dialog_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/menu_notedelete"
            android:textSize="15dp"
            android:textColor="#ffffff"
            android:paddingLeft="20dp"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#636262"/>
    <LinearLayout
        android:id="@+id/main_dialog_linear_change"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:elevation="10dp"
        android:orientation="horizontal"
        android:clickable="true">
        <ImageView
            android:padding="10dp"
            android:layout_weight="4"
            android:src="@drawable/dialog_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/menu_notechange"
            android:textColor="#ffffff"
            android:textSize="15dp"
            android:paddingLeft="20dp"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#636262"/>

</LinearLayout>